Mise en place de l'apiTokenAuthenticator

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,11 +15,13 @@ security:
       security: false
     main:
       lazy: true
-      provider: app_user_provider
       stateless: true
+      provider: app_user_provider
       json_login:
         # api_login is a route we will create below
         check_path: app_api_login
+      custom_authenticator:
+        - App\Security\ApiTokenAuthenticator
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
@@ -31,7 +33,9 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     # - { path: ^/admin, roles: ROLE_ADMIN }
-    # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/api/registration, roles: PUBLIC_ACCESS }
+    - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api, roles: ROLE_USER }
 
 when@test:
   security:
