--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,11 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/employes, roles: ROLE_EMPLOYES }
+    - { path: ^/passagers, roles: ROLE_PASSAGERS }
+    - { path: ^/chauffeurs, roles: ROLE_CHAUFFEURS }
+    - { path: ^/chauffeurs_passagers, roles: ROLE_CHAUFFEURS_PASSAGERS }
     - { path: ^/api/registration, roles: PUBLIC_ACCESS }
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
     - { path: ^/api, roles: ROLE_USER }
