Verification d'accès à AvisController

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,6 +39,7 @@ security:
     - { path: ^/chauffeur_passager, roles: ROLE_PASSAGER_CHAUFFEUR }
     - { path: ^/api/registration, roles: PUBLIC_ACCESS }
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
+    - { path: ^/api/avis/avisVisible, roles: PUBLIC_ACCESS }
     - { path: ^/api, roles: ROLE_USER }
 
 when@test:
