--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,6 +40,7 @@ security:
     - { path: ^/api/registration, roles: PUBLIC_ACCESS }
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
     - { path: ^/api/avis/avisVisible, roles: PUBLIC_ACCESS }
+    - { path: ^/api/doc, roles: PUBLIC_ACCESS }
     - { path: ^/api, roles: ROLE_USER }
 
 when@test:
