--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,9 +1,18 @@
 nelmio_api_doc:
-    documentation:
-        info:
-            title: My App
-            description: This is an awesome app!
-            version: 1.0.0
-    areas: # to filter documented areas
-        path_patterns:
-            - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
+  documentation:
+    info:
+      title: EcoRide API
+      description: Documentation de l'API EcoRide
+      version: 1.0.0
+    components:
+      securitySchemes:
+        X-AUTH-TOKEN:
+          type: apiKey
+          name: X-AUTH-TOKEN
+          in: header
+    security:
+      - X-AUTH-TOKEN: []
+
+  areas: # to filter documented areas
+    path_patterns:
+      - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
