--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,7 @@ security:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
+
     main:
       lazy: true
       stateless: true
@@ -32,6 +33,8 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
+    - { path: ^/api/image/, roles: PUBLIC_ACCESS }
+    - { path: ^/api/trajet/, roles: PUBLIC_ACCESS }
     - { path: ^/admin, roles: ROLE_ADMIN }
     - { path: ^/employe, roles: ROLE_EMPLOYE }
     - { path: ^/passager, roles: ROLE_PASSAGER }
@@ -40,6 +43,7 @@ security:
     - { path: ^/api/registration, roles: PUBLIC_ACCESS }
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
     - { path: ^/api/avis/avisVisible, roles: PUBLIC_ACCESS }
+    - { path: ^/api/trajet/api/listeTrajets, roles: PUBLIC_ACCESS }
     - { path: ^/api/doc, roles: PUBLIC_ACCESS }
     - { path: ^/api, roles: ROLE_USER }
 
