Mis en place de l'archivage des trajets en BDD non relationnel NoSQL MongoDB back-end

--- a/.env
+++ b/.env
@@ -43,3 +43,14 @@ MAILER_DSN=null://null
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+MONGODB_URL=mongodb://localhost:27017/EcoRideDB
+
+
+###> doctrine/mongodb-odm-bundle ###
+# Format described at https://www.mongodb.com/docs/php-library/current/connect/connection-options/
+# MONGODB_URI="mongodb://username:password@localhost:27017/?authSource=auth-db"
+# MONGODB_URI="mongodb+srv://username:password@YOUR_CLUSTER_NAME.YOUR_HASH.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URI=mongodb://localhost:27017
+MONGODB_DB=symfony
+###< doctrine/mongodb-odm-bundle ###
