--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/mongodb-odm-bundle": "^5.4",
         "doctrine/orm": "^3.3",
         "fakerphp/faker": "^1.24",
         "knplabs/knp-paginator-bundle": "^6.8",
+        "mongodb/mongodb": "^2.1.1",
         "nelmio/api-doc-bundle": "^5.0",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6",
